babylon-panprama.html を表示させるように修正

--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
               path: 'xr-barebones.html',
               description: 'Extremely simple use of WebXR with no library dependencies. Doesn\'t render anything exciting.',
               noPolyfill: true },
+
+            { title: 'Babylon', category: 'Content',
+              path: 'babylon-panorama.html',
+              description: 'test babylon js'},
           ];
 
           let mainElement = document.getElementById("main");
