--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
               description: 'Extremely simple use of WebXR with no library dependencies. Doesn\'t render anything exciting.',
               noPolyfill: true },
 
-            { title: 'Babylon', category: 'Content',
-              path: 'babylon-panorama.html',
-              description: 'test babylon js'},
+            { title: 'WebXR sample', category: 'Content',
+              path: 'webxr-test.html',
+              description: 'webxr test'},
           ];
 
           let mainElement = document.getElementById("main");
