--- a/webxr-test.html
+++ b/webxr-test.html
@@ -12,12 +12,20 @@
         let button = document.createElement("button");
         button.textContent = "hello";
         document.getElementById("obj").appendChild(button);
+        button.addEventListener("click", onRequestSession);
         console.log("hey");
+        
         if(navigator.xr){
-            navigator.xr.supportsSession('immersive-vr').then(() => {
+            navigator.xr.supportsSession("immersive-vr").then(() => {
                 document.getElementById("obj").appendChild(button);
                 console.log("support webxr");
             });
+        }
+
+        function onRequestSession(){
+            navigator.xr.requestSession("immersive-vr").then((session) => {
+                
+            })
         }
     </script>
 </body>
