navigator.xrを認識している時、headerに文章が表示されるように修正

--- a/webxr-test.html
+++ b/webxr-test.html
@@ -21,7 +21,7 @@
         if(navigator.xr){
             let text = document.createElement("p");
             text.textContent = "navigator.xr を認識しています";
-            document.getElementsByTagName("header");
+            document.getElementsByTagName("header").appendChild(text);
 
             navigator.xr.supportsSession("immersive-vr").then(() => {
                 document.getElementById("obj").appendChild(button);
