idでheaderを取れるように修正

--- a/webxr-test.html
+++ b/webxr-test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <p>HEADER</p>
     </header>
     <div id="obj"></div>
@@ -21,7 +21,7 @@
         if(navigator.xr){
             let text = document.createElement("p");
             text.textContent = "navigator.xr を認識しています";
-            document.getElementsByTagName("header").appendChild(text);
+            document.getElementById("header").appendChild(text);
 
             navigator.xr.supportsSession("immersive-vr").then(() => {
                 document.getElementById("obj").appendChild(button);
