--- a/webxr-test.html
+++ b/webxr-test.html
@@ -15,8 +15,8 @@
     </header>
     <div id="obj"></div>
     <script>
-        import WebXRPolyfill from "./js/third-party/webxr-polyfill/build/webxr-polyfill.module.js";
-        let polyfill = new WebXRPolyfill();
+        // import WebXRPolyfill from "./js/third-party/webxr-polyfill/build/webxr-polyfill.module.js";
+        // let polyfill = new WebXRPolyfill();
 
         let button = document.createElement("button");
         button.textContent = "hello";
