文章を修正

--- a/webxr-test.html
+++ b/webxr-test.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="header">
-        <p>HEADER</p>
+        <p>対応 WEB API一覧</p>
     </header>
     <div id="obj"></div>
     <script>
@@ -23,6 +23,7 @@
         document.getElementById("obj").appendChild(button);
         button.addEventListener("click", onRequestSession);
         console.log("hey");
+
 
         if(navigator.xr){
             let text = document.createElement("p");
