--- a/webxr-test.html
+++ b/webxr-test.html
@@ -64,7 +64,7 @@
             }
         } catch(e) {
             let errorText = document.createElement("p");
-            errorText.textContent = e.message;
+            errorText.textContent = "error" + e.message;
             document.getElementById("error-message").appendChild(errorText);
             console.log(errorText.textContent);
         }
