--- a/index.html
+++ b/index.html
@@ -1,182 +1,80 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='chrome=1'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name='mobile-web-app-capable' content='yes'>
-    <meta name='apple-mobile-web-app-capable' content='yes'>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Document</title>
 
-    <meta name='twitter:card' content='summary'>
-    <meta name='twitter:title' content='WebXR Samples'>
-    <meta name='twitter:description' content='Sample WebXR pages for testing and reference'>
+    <meta http-equiv="origin-trial" content="AsRrvyQjAl9rU6y9LjRT0zG1MSdLR8WLtEtvZlroYAASlD4y5T0pWay1oL+NR9g6oxoahdrVHq3YEz+dVK1cBwMAAABfeyJvcmlnaW4iOiJodHRwczovL2ltbWVyc2l2ZS13ZWIuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJYUkRldmljZU03NiIsImV4cGlyeSI6MTU3MDA1Mjg3OH0=">
+</head>
+<body>
+    <header id="header">
+        <p>対応 WEB API一覧</p>
+    </header>
+    <div id="start-webxr"></div>
+    <div id="start-webbluetooth"></div>
+    <div id="error-message"></div>
+    <script>
+        // import WebXRPolyfill from "./js/third-party/webxr-polyfill/build/webxr-polyfill.module.js";
+        // let polyfill = new WebXRPolyfill();
 
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+        let webxrButton = document.createElement("button");
+        webxrButton.textContent = "start XR session";
+        document.getElementById("start-webxr").appendChild(webxrButton);
+        webxrButton.addEventListener("click", onRequestSession);
 
-    <link rel='stylesheet' href='css/stylesheet.css'>
-    <link rel='stylesheet' href='css/pygment_trac.css'>
+        let webbluetoothButton = document.createElement("button");
+        webbluetoothButton.textContent = "start WebBluetooth session";
+        document.getElementById("start-webbluetooth").appendChild(webbluetoothButton);
+        webbluetoothButton.addEventListener("click", onRequestBluetoothSession);
 
-    <style>
-      article {
-        position: relative;
-        padding: 0.5em;
-        background-color: rgba(255, 255, 255, 0.90);
-        margin-bottom: 1em;
-        border-radius: 3px;
-      }
 
-      article h3 {
-        font-size: 1.0em;
-        margin-top: 0px;
-        margin-bottom: 0px;
-      }
+        if(navigator.xr){
+            let text = document.createElement("p");
+            text.textContent = "navigator.xr を認識しています";
+            document.getElementById("header").appendChild(text);
 
-      article h3::before {
-        display: inline-block;
-        content: attr(data-index) ' - ';
-        font-weight: bold;
-        white-space: nowrap;
-        margin-right: 0.2em;
-      }
+            navigator.xr.supportsSession("immersive-vr").then(() => {
+                document.getElementById("obj").appendChild(button);
+                console.log("support webxr");
+            });
+        } else {
+            let text = document.createElement("p");
+            text.textContent = "navigator.xr を認識していません";
+            document.getElementById("header").appendChild(text);
+        }
 
-      article h4 {
-        position: absolute;
-        right: 0.5em;
-        top: 0.5em;
-        margin-top: 0px;
-        margin-bottom: 0px;
-      }
+        function onRequestSession(){
+            navigator.xr.requestSession("immersive-vr").then((session) => {
 
-      article p {
-        margin: 0.5em;
-      }
+            })
+        }
 
-      article .links {
-        margin-left: 0.5em;
-        margin-right: 0.5em;
-      }
-
-      article a {
-        display: inline-block;
-      }
-
-      article a:not(:first-child)::before {
-        display: inline-block;
-        content: '•';
-        font-weight: bold;
-        white-space: nowrap;
-        margin-left: 0.5em;
-        margin-right: 0.5em;
-      }
-
-      .github-link {
-        font-size: 0.8em;
-      }
-
-      .wordmark img {
-        width: 70%;
-      }
-    </style>
-
-    <!--[if lt IE 9]>
-    <script src='https://html5shiv.googlecode.com/svn/trunk/html5.js'></script>
-    <![endif]-->
-    <title>WebXR - Samples</title>
-  </head>
-  <body>
-
-    <div class='container' id='container'>
-      <header class='header'>
-        <div id='nav'>
-            <a href='./' class='selected'>Samples</a>
-            <!--a href='proposals/'>Proposals</a-->
-            <a href='tests/'>Test Pages</a>
-        </div>
-
-        <h1>
-          <a href='' class='wordmark'>
-            <img src='media/logo/webxr-logo.svg' alt='WebXR Logo'/>
-          </a>
-        </h1>
-        <h2 class='tagline'>Sample Pages</h2>
-      </header>
-
-      <main class='main' id='main'>
-        <p>Sample pages demonstrating how to use various aspects of the WebXR API.<br/>
-        <a href="explainer.html">Learn More</a></p>
-
-        <script>
-          let pages = [
-            
-            { title: 'WebXR sample', category: 'Content',
-              path: 'webxr-test.html',
-              description: 'webxr test'},
-          ];
-
-          let mainElement = document.getElementById("main");
-
-          // Append an element for every item in the pages list.
-          let pageIndex = 0;
-          for (var i = 0; i < pages.length; ++i) {
-            var page = pages[i];
-
-            if (page.tag) {
-              mainElement.appendChild(document.createElement(page.tag));
-              continue;
+        try {
+            if(navigator.bluetooth){
+                let text = document.createElement("p");
+                text.textContent = "navigator.bluetoothを認識しています";
+                document.getElementById("header").appendChild(text);
             } else {
-              pageIndex++;
+                let text = document.createElement("p");
+                text.textContent = "navigator.bluetoothを認識していません";
+                document.getElementById("header").appendChild(text);
             }
+        } catch(e) {
+            let errorText = document.createElement("p");
+            errorText.textContent = "error" + e.message;
+            document.getElementById("error-message").appendChild(errorText);
+            console.log(errorText.textContent);
+        }
 
-            let article = document.createElement('article');
+        function onRequestBluetoothSession(){
+            navigator.bluetooth.requestDevice({
+                acceptAllDevices: true
+            });
+        }
 
-            let title = document.createElement('h3');
-            title.setAttribute('data-index', pageIndex);
-
-            let titleLink = document.createElement('a');
-            titleLink.href = page.path;
-            titleLink.innerHTML = page.title;
-            title.appendChild(titleLink);
-            article.appendChild(title);
-
-            let category = document.createElement('h4');
-            category.innerHTML = page.category;
-            article.appendChild(category);
-
-            let description = document.createElement('p');
-            description.innerHTML = page.description;
-            article.appendChild(description);
-
-            let links = document.createElement('div');
-            links.classList.add('links');
-
-            let sourceLink = document.createElement('a');
-            sourceLink.href = 'https://github.com/immersive-web/webxr-samples/blob/master/' + page.path;
-            sourceLink.innerHTML = 'Source';
-            links.appendChild(sourceLink);
-
-            if (!page.noPolyfill) {
-              let polyfillLink = document.createElement('a');
-              polyfillLink.href = page.path + '?usePolyfill=0';
-              polyfillLink.innerHTML = 'Run Without Polyfill';
-              links.appendChild(polyfillLink);
-            }
-
-            article.appendChild(links);
-
-            mainElement.appendChild(article);
-          }
-        </script>
-      </main>
-
-      <p>Models used in these samples come from <a href="https://poly.google.com">Poly</a>, and many were modeled in <a href="https://vr.google.com/blocks/">Blocks</a>.<br/>
-      They a stored and loaded using the <a href="https://www.khronos.org/gltf/">glTF 2.0 format</a>.<br/>
-      Attribution for individual models can be found under the <a href="https://github.com/immersive-web/webxr-samples/tree/master/media/gltf">media/gltf</a> folders for this repository.</p>
-
-      <h3><a class='github-link' href='https://github.com/immersive-web/webxr-samples'>View samples source on GitHub</a></h3>
-
-      <footer class='footer'>
-      </footer>
-    </div>
-  </body>
+    </script>
+</body>
 </html>
