タイトルを修正

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Document</title>
+    <title>Wakuwaku.co.jp</title>
 </head>
 <body>
     <header id="header">
-        <p>対応 WEB API一覧</p>
+        WAKUWAKU
     </header>
-    <div id="start-webxr"></div>
-    <div id="start-webbluetooth"></div>
-    <div id="error-message"></div>
+    <div>
+        <h1>
+            対応 WEB API一覧
+        </h1>
+        <div id="start-webxr"></div>
+        <div id="start-webbluetooth"></div>
+        <div id="error-message"></div>
+    </div>
+  
     <script>
 
         let webxrButton = document.createElement("button");
