枠線をつける

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div id="error-message"></div>
     </div>
     <div>
-        <br>
-        <div>
+        <div　style="border: 1px soild blue">
             <p>Bluetoothデバイスから読み込む</p>
             <button onclick="onRequestBluetoothSession('read')">read</button>
         </div>
