--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <h2>WAKUWAKU</h2>
-    <div style="padding-bottom: 10px">
+    <div>
         <h3 id="status">対応 WEB API一覧</h3>
 
         <div id="start-webxr"></div>
         <div id="start-webbluetooth"></div>
-        <div id="error-message"></div>
+        <div  id="error-message"  style="padding-bottom: 10px"></div>
     </div>
     <div>
         <div>
