--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="start-webxr"></div>
         <div id="start-webbluetooth"></div>
-        <div  id="error-message"  style="padding-bottom: 10px"></div>
+        <div  id="error-message"></div>
     </div>
     <div>
         <div>
