--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h2>WAKUWAKU</h2>
-    <div>
+    <div style="background-color: aquamarine">
         <h3 id="status">対応 WEB API一覧</h3>
 
         <div id="start-webxr"></div>
         <div id="start-webbluetooth"></div>
         <div  id="error-message"></div>
     </div>
-    <div>
+    <div style="background-color: bisque">
         <div>
             <p>Bluetoothデバイスから読み込む</p>
             <button onclick="onRequestBluetoothSession('read')">read</button>
