--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h2>WAKUWAKU</h2>
-    <div style="background-color: aquamarine">
+    <div style="background-color:darkseagreen">
         <h3 id="status">対応 WEB API一覧</h3>
-
+    </div>
+    <div style="background-color: darkgrey">
         <div id="start-webxr"></div>
-        <div id="start-webbluetooth"></div>
+        <!-- <div id="start-webbluetooth"></div> -->
         <div  id="error-message"></div>
     </div>
     <div style="background-color: bisque">
